--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -3,7 +3,7 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
+html, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -47,7 +47,7 @@ table {
 	border-spacing: 0;
 }
 /** end reset css**/
-body {
+.index__body {
 	max-width: 1140px;
 	margin:auto;
 	font-family: 'Work Sans' ;
@@ -93,6 +93,11 @@ nav ul {
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
+}
+
+nav a {
+	color: black;
+	text-decoration: none;
 }
 
 li:hover {
@@ -163,31 +168,31 @@ li:hover {
 	width: 100%;
 
 }
-#contact {
+#contact, #login {
 	width: 50%;
 margin: auto;
 }
-#contact > * {
+#contact > *, #login > * {
 	text-align: center;
 
 }
-#contact h2{
+#contact h2, #login h2 {
 	margin-bottom: 20px;
 }
-#contact form {
+#contact form, #login form {
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
 
-#contact input {
+#contact input, #login input {
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+#contact label, #login label {
 	margin: 2em 0 1em 0;
 }
 #contact textarea {
@@ -212,3 +217,21 @@ footer nav ul {
 	margin: 2em
 }
 
+/** login **/
+
+.login__onpage {
+	font-weight: 700;
+}
+
+.login__body {
+	max-width: 1140px;
+	min-height: 100vh;
+	margin: 0 auto;
+	position: relative;	
+}
+
+.login__footer {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+}
