--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -56,7 +56,7 @@ table {
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	padding: 50px 0
 }
 section {
 	margin: 50px 0
