--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -30,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	margin: 0;
 }
 ol, ul {
 	list-style: none;
@@ -48,19 +50,27 @@ table {
 }
 /** end reset css**/
 .index__body {
-	max-width: 1140px;
-	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
+	background-color: #fffef8;
 }
+
 header {
 	display: flex;
 	justify-content: space-between;
-	padding: 50px 0
+	padding: 50px 0;
+	max-width: 1140px;
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom: 30px;
 }
-section {
-	margin: 50px 0
+
+main {
+	max-width: 1000px;
+	margin: auto
+
 }
+
 
 h1{
 	display: flex;
@@ -68,21 +78,20 @@ h1{
 	font-family: 'Syne';
 	font-size: 22px;
 	font-weight: 800;
-	color: #B1663C
+	color: #B1663C;
 }
 
 h1 > span {
 	font-family: 'Work Sans';
 	font-size:10px;
 	letter-spacing: 0.1em;
-;
 }
 
 h2{
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
-	color: #1D6154
+	color: #1D6154;
 }
 nav ul {
 	display: flex;
@@ -98,6 +107,10 @@ nav li {
 nav a {
 	color: black;
 	text-decoration: none;
+}
+
+.insta {
+	height: 20px;
 }
 
 li:hover {
@@ -117,7 +130,8 @@ li:hover {
 }
 
 #introduction article {
-	flex: 1
+	flex: 1;
+	padding-right: 40px;
 }
 #introduction h2 {
 	margin-bottom: 1em;
@@ -126,10 +140,17 @@ li:hover {
 #introduction p {
 	margin-bottom: 0.5em;
 }
+
+#portfolio {
+	margin: 80px 0;
+}
+
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
+/*** Filtre ****/
 
 .filtres {
 	display: flex;
@@ -144,7 +165,7 @@ li:hover {
 	border-radius: 60px;
 	border: solid 1px;
 	border-color: #1D6154;
-	background-color: white;
+	background-color: transparent;
 	padding: 7px 10px;
 	font-family: 'Syne';
 	font-weight: 700;
@@ -156,8 +177,12 @@ li:hover {
 	background-color: #1D6154;
 }
 
+/***** Fin filtre ****/
+
 .gallery {
 	width: 100%;
+	max-width: 900px;
+	margin: auto;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
@@ -212,6 +237,16 @@ input[type="submit"]{
 	cursor: pointer;
 }
 
+footer {
+	background-color: white;
+	display: flex;
+	justify-content: flex-end;
+	padding-right: 6em;
+	font-family: 'Work Sans' ;
+	font-size: 0.8em;
+
+}
+
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
@@ -225,14 +260,83 @@ footer nav ul {
 }
 
 .login__body {
-	max-width: 1140px;
 	min-height: 100vh;
-	margin: 0 auto;
+	margin: auto;
 	position: relative;	
+	background-color: #fffef8;
+}
+
+.login__body main {
+	max-width: 1140px;
 }
 
 .login__footer {
+	width: 100%;
 	position: absolute;
 	bottom: 0;
-	right: 0;
+	font-family: 'Work Sans' ;
+	font-size: 0.8em;
+}
+
+.footer__login nav ul {
+	background-color: white;
+	display: flex;
+	justify-content: flex-end;
+	padding-right: 6em;
+}
+
+.recover-password {
+	width: 170px;
+	font-family: 'Work Sans' ;
+	font-size: 0.9em;
+	font-weight: 500;
+	border: none;
+	background-color: transparent;
+	text-decoration: underline;
+}
+
+/**** Mode édition ****/
+
+.mode-edition {
+	background-color: black;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+	padding : 7px 0px;
+	width: 100%;
+}
+
+.mode-edition__bouton1 {
+	color: white;
+	display: flex;
+	flex-direction: row;
+	gap: 15px;
+	border : none;
+	background-color: black;
+	font-family: 'Work Sans' ;
+	font-size: 1.1em;
+	cursor: pointer;
+}
+
+.mode-edition__bouton2 {
+	border-radius: 15px;
+	border: none;
+	background-color: white;
+	font-family: 'Work Sans' ;
+	font-size: 1em;
+	padding: 8px 15px;
+	cursor: pointer;
+}
+
+.bouton-modifier {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 10px;
+	font-family: 'Work Sans' ;
+	font-size: 0.9em;
+	border: none;
+	background-color: transparent;
 }
