--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -157,8 +157,6 @@ nav a:hover {
 	display: flex;
 	justify-content: center;
 	gap: 10px;
-	margin-bottom: 45px;
-	margin-top: 40px;
 }
 
 .filtres__boutons {
@@ -188,6 +186,7 @@ nav a:hover {
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
+	margin-top: 50px;
 }
 
 .gallery img {
@@ -307,6 +306,7 @@ footer nav ul {
 	gap: 20px;
 	padding : 7px 0px;
 	width: 100%;
+	display: none;
 }
 
 .mode-edition__bouton1 {
@@ -332,7 +332,6 @@ footer nav ul {
 }
 
 .bouton-modifier {
-	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	gap: 10px;
@@ -340,6 +339,8 @@ footer nav ul {
 	font-size: 0.9em;
 	border: none;
 	background-color: transparent;
+	display: none;
+	cursor: pointer;
 }
 
 .bm1 {
@@ -356,6 +357,7 @@ footer nav ul {
 	position: relative;
 	width: 200px;
 	margin: auto;
+	margin-bottom: 50px;
 }
 
 .bm2 {
