--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -319,6 +319,7 @@ footer nav ul {
 	font-family: 'Work Sans' ;
 	font-size: 1.1em;
 	cursor: pointer;
+	text-decoration: none;
 }
 
 .mode-edition__bouton2 {
@@ -363,7 +364,9 @@ footer nav ul {
 .bm2 {
 	position: absolute;
 	right: -100px;
-	top: 10px;;
+	top: 10px;
+	text-decoration: none;
+	color: black;
 }
 
 /******* Modal *******/
@@ -377,7 +380,7 @@ footer nav ul {
 	bottom: 0;
 	z-index: 1000;
 	background: rgba(0, 0, 0, 0.4);
-	display: flex;
+	display: none;
 	align-items: center;
 	justify-content: center;
 }
@@ -410,6 +413,7 @@ footer nav ul {
 .retour, .fermer {
 	border: none;
 	background: transparent;
+	cursor: pointer;
 }
 
 .contenu-modal {
@@ -498,6 +502,11 @@ footer nav ul {
 	margin : 2em auto ;
 	border-radius: 60px;
 	font-size: 0.9em;
+}
+
+.valider2 {
+	background-color: #1D6154;
+	cursor: pointer;
 }
 
 .contenu-modal form {
