--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -435,11 +435,11 @@ footer nav ul {
 }
 
 .contenu-flexible-modal {
-	width: calc(100% - 150px);
+	width: 100%;
 }
 
 .barre-modal {
-	width: 100%;
+	width: 410px;
 	background-color: #B3B3B3;
 	height: 2px;
 }
@@ -463,7 +463,7 @@ footer nav ul {
 .galerie-modal {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	column-gap: 5px;
+	column-gap: 7px;
 	row-gap: 15px;
 	margin-bottom: 20px;
 }
@@ -491,7 +491,7 @@ footer nav ul {
 }
 
 .boutons-bas-modal {
-	width: calc(100% - 160px);
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
