--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -560,7 +560,7 @@ footer nav ul {
 .contenu-modal form {
 	margin-top: 0;
 	margin-bottom: 40px;
-	width: calc(100% - 180px);
+	width: 100%;
 }
 
 select {
@@ -587,3 +587,4 @@ select {
 .cadre-ajout-photo p {
 	font-size: 0.8em;
 }
+
