--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -537,7 +537,16 @@ footer nav ul {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 20px;
+	padding: 10px;
+	position: relative;
+}
+
+.photoinput {
+	position: absolute;
+	bottom: 30px;
+	border-radius: 25px;
+	visibility: hidden;
+	width: 170px;
 }
 
 .valider1 {
@@ -579,8 +588,6 @@ select {
 	background-color: #CBD6DC;
 	font-family: 'Work Sans';
 	padding: 10px;
-	margin-top: 15px;
-	margin-bottom: 6px;
 	cursor: pointer;
 }
 
@@ -588,3 +595,10 @@ select {
 	font-size: 0.8em;
 }
 
+.photo-choisie {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	max-height: 170px;
+	max-width: 100%;
+}
